--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -37,7 +37,7 @@ jobs:
 
   Continuous-Deployment:
     needs: Continuous-Integration
-    runs-on: 'self-hosted', 'Linux', 'X64'
+    runs-on: 'self-hosted'
     steps:
       - name: Checkout
         uses: actions/checkout@v3
